# COVID_DAILY_COUNTS

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  feature-pipeline.yml  inference-pipeline.yml  train-pipeline.yml
models/: covid_regression-xgboost-v1.joblib
notebooks/: README.md
notebooks/1-data/: 1_Covid_feature_backfill.ipynb
notebooks/2-exploration/: feature_pipeline.py
notebooks/4-feat_eng/: feature-engineering.ipynb
notebooks/5-models/: 5-modelo-baseline.ipynb  6-mejor-modelo.ipynb  experiment_tracking.ipynb
notebooks/6-interpretation/: interpretacion.ipynb
src/: config.py
src/model/: model.json
src/pipelines/feature_pipeline/: feature_pipeline.py
src/pipelines/inference_pipeline/: inference-pipeline.py
src/pipelines/training_pipeline/: training_pipeline.py  utils.py
src/streamlit/: app.py
src/utils/: util.py
src/validations/: covid_schema.py
tests/pipelines/inference_pipeline/: test_inference_pipeline.py
tests/pipelines/training_pipeline/: test_training_pipeline.py  test_validation.py
