[project]
name = "MTA-NYCTrains"
version = "0.1.0"
description = "This repository implements a real-time data processing and analysis system for MTA NYC trains"
authors = [
    "Susana Gutierrez & Alejandro Londoño <peter.parker@web.com>",
]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
]

[project.urls]
documentation = "https://Susanagg05.github.io/MTA-NYCTrains"
repository = "https://github.com/Susanagg05/MTA-NYCTrains"


[dependency-groups]
dev = [
    "pre-commit>=4.2.0", # Code linting and formatting
    "pytest>=8.3.5", # Testing framework
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.1.1",
    "cruft[pyproject]>=2.15.0",# Automated Cookiecutter template synchronization
]

#

[tool.uv]
package = false
default-groups = [
    "dev",
#
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
